--- a/index.html
+++ b/index.html
@@ -59,16 +59,14 @@
 
      <main>
 
-        <section class="layout-2">
+        <section class="layout-2 s-body">
             <div class="container">
                 <div class="row main-layout">
                     <div class="col-65">
                         <img src="./img/item1.svg" alt="img-1">
                     </div>
                     <div class="col-35">
-                        <h2>
-                            Un luogo a invito con tutto lo <br> spazio <br> necessario per <br> parlare
-                        </h2>
+                        <h2>Un luogo a invito <br> con tutto lo <br> spazio <br> necessario per <br> parlare</h2>
                         <p>
                             I server Discord sono organizzatiin canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo. 
                         </p>
@@ -77,20 +75,36 @@
             </div>
         </section>
 
-        <section class="layout-3">
+        <section class="layout-3 s-body">
             <div class="container">
                 <div class="row main-layout">
-                    <div class="col-35"></div>
-                    <div class="col-65"></div>
+                    <div class="col-35 flex-s"">
+                        <h2>
+                            Dove trovarsi é <br> facile
+                        </h2>
+                        <p>
+                            Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei lì e unirsi istantaneamente senza dover chiamare.
+                        </p>
+                    </div>
+                    <div class="col-65">
+                        <img src="./img/item2.svg" alt="">
+                    </div>
                 </div>
             </div>
         </section>
 
-        <section class="layout-2">
+        <section class="layout-2 s-body">
             <div class="container">
                 <div class="row main-layout">
-                    <div class="col-65"></div>
-                    <div class="col-35"></div>
+                    <div class="col-65">
+                        <img src="./img/item3.svg" alt="">
+                    </div>
+                    <div class="col-35 flex-s">
+                        <h2>Da pochi a un <br> fandom</h2>
+                        <p>
+                            Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e molto altro.
+                        </p>
+                    </div>
                 </div>
             </div>
         </section>
@@ -98,7 +112,13 @@
         <section class="layout-3">
             <div class="container">
                 <div class="row body-layout">
-                    <div class="col-100"></div>
+                    <div class="col-100">
+                        <h2>Tecnologia affidabile per tenersi in contatto</h2>
+                        <p>
+                            Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda <br> gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.
+                        </p>
+                        <img src="./img/item4-big.svg" alt="">
+                    </div>
                 </div>
             </div>
         </section>
