--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                             Che tu faccia parte di un club scolastico,gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.
                         </p>
                         <span>
-                            <a class="cta" href="#">&#8681;Scarica per Mac</a>
+                            <a class="cta" href="#">&#8681; Scarica per Mac</a>
                         </span>
                         <span>
                             <a class="cta bg-b" href="#">Apri Discord nel tuo browser</a>
@@ -117,31 +117,63 @@
                         <p>
                             Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda <br> gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.
                         </p>
-                        <img src="./img/item4-big.svg" alt="">
+                        <img src="./img/item4-big.svg" alt=""> 
+                        <img src="./img/stars.svg" alt="">                      
+                        <h3>Pronto a iniziare la tua avventura?</h3>
+                        <div>
+                            <a class="cta main-foot" href="#">&#8681; Scarica per Mac</a>
+                        </div>                                          
                     </div>
                 </div>
             </div>
         </section>
 
-        <section class="layout-4">
-            <div class="container">
-                <div class="row main-layout">
-                    <div class="col-2-6"></div>
-                    <div class="col-1-6"></div>
-                    <div class="col-1-6"></div>
-                    <div class="col-1-6"></div>
-                    <div class="col-1-6"></div>
-                </div>
-            </div>
-        </section>
     </main>
 
     <footer class="main-footer">
 
-            <div class="container">
+            <div class="container c-foot border-foot">
+                <div class="row lay-foot">
+                    <div class="col-2-6">
+                        <h3>Il tuo posto per parlare</h3>
+                        <div class="img-ita">
+                            <img src="./img/ita.png" alt="" height="18">
+                            <span>italiano&#x25BC;</span>
+                        </div>
+                        
+                    </div>
+                    <div class="col-1-6">
+                        <h4>Prodotto</h4>
+                        <p>
+                            Scarica <br> Perchè Discord <br> Nitro <br> Sicurezza <br> Assistenza
+                        </p>
+                    </div>
+                    <div class="col-1-6">
+                        <h4>Compagnia</h4>
+                        <p>
+                            Chi siamo <br> Lavora con noi <br> Marchio <br> Redazione <br> Negozio
+                        </p>
+                    </div>
+                    <div class="col-1-6">
+                        <h4>Risorse</h4>
+                        <p>
+                            Scarica <br> Perchè Discord <br> Nitro <br> Sicurezza <br> Assistenza <br> Scarica <br> Perchè Discord <br> Nitro <br> Sicurezza <br> Assistenza
+                        </p>
+                    </div>
+                    <div class="col-1-6">
+                        <h4>Norme</h4>
+                        <p>
+                            Scarica <br> Perchè Discord <br> Nitro <br> Sicurezza <br> Assistenza
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="container c-foot ">
                 <div class="row row-footer">
-                    <a class="logo bordo" href="#">logo</a>
-                    <button class="bordo">bottone</button>
+                    <a class="main-foot" href="#">
+                        <img src="./img/logo.svg" alt="">
+                    </a>
+                    <a class="cta main-foot" href="#">Registrati</a>
                 </div>
             </div>
         
